# seqid

./: Cargo.toml  README.md
src/: lib.rs
src/impls/: hashmap.rs  mod.rs  unsigned.rs
src/traits/: finite.rs  mod.rs  unique.rs
