[package]
name = "seqid"
version = "0.1.2"
edition = "2021"

authors = [
    "Andres Garcia <agrc14@gmail.com>"
]

description = "Sequential ID generator traits with some default implementations"
readme = "README.md"
license = "MIT OR MPL-2.0"

repository = "https://github.com/micro-rust/seqid"

keywords = ["utility", "uid", "generator", "no-dependencies"]
categories = ["no-std", "no-std::no-alloc"]

publish = true


[features]

# Default features.
default = ["alloc"]

# Enables some alloc implementations.
alloc = []
